--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
   $(function(){
         var socket = io();
         $('form').submit(function(){
-           socket.emit('chat message', $('#m').val());
+           socket.emit('startSession', $('#m').val());
            $('#m').val('');
             return false;
           });
-          socket.on('chat message', function(msg){
+          socket.on('onSessionStart', function(msg){
+            $('#messages').append($('<li>').text(msg));
+          });
+          socket.on('onListSessions', function(msg){
             $('#messages').append($('<li>').text(msg));
           });
        });
