--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   $(function(){
         var socket = io();
         $('form').submit(function(){
+            $('#messages').append($('<li>').text( socket.socketURL ));
+
            socket.emit('startSession', $('#m').val());
            $('#m').val('');
             return false;
