--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   $(function(){
         var socket = io();
         $('form').submit(function(){
-            $('#messages').append($('<li>').text( socket.socketURL ));
+            console.log( socket );
 
            socket.emit('startSession', $('#m').val());
            $('#m').val('');
